# ankidroid-tooltip1

./: README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_bridge.cpp
app/src/main/java/com/example/ankicopy/: AnkiAccessibilityService.kt  MainActivity.kt  Prefs.kt
app/src/main/java/com/example/ankicopy/llm/: LlamaEngine.kt  LlmManager.kt
app/src/main/java/com/example/ankicopy/overlay/: TooltipOverlay.kt
app/src/main/res/anim/: tooltip_fade_in.xml
app/src/main/res/drawable/: tooltip_card_bg.xml  tooltip_dot.xml  tooltip_header_bg.xml
app/src/main/res/layout/: activity_main.xml  tooltip_overlay.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
